Instructions for getting started

--- a/btMesh_configuration.json
+++ b/btMesh_configuration.json
@@ -10,7 +10,7 @@
       {
         "Name": "Primary Element",
         "Loc": "0x0000",
-        "NumS": "13",
+        "NumS": "14",
         "NumV": "0",
         "SIG Models": [
           "0x0000",
@@ -38,7 +38,9 @@
           "0x1203",
           "Scene Server",
           "0x1204",
-          "Scene Setup Server"]
+          "Scene Setup Server",
+          "0x1001",
+          "Generic OnOff Client"]
         ,
         "Vendor Models": [
           ]
@@ -67,7 +69,7 @@
   },
   "Memory configuration": {
     "MAX_ELEMENTS": "2",
-    "MAX_MODELS": "18",
+    "MAX_MODELS": "19",
     "MAX_APP_BINDS": "4",
     "MAX_SUBSCRIPTIONS": "4",
     "MAX_NETKEYS": "4",
