--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>soc-btmesh-light_2</name>
+	<name>course-project-pshiralagi</name>
 	<comment></comment>
 	<projects>
 	</projects>
